--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Django==2.2.17
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.0.1
-psycopg2-binary
+psycopg2-binary==2.8.5
 pycparser==2.20
 PyJWT==2.0.1
 python3-openid==3.2.0
